# DataAggregator-TG-BOT-

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: app.py
src/bot/: handlers.py  states.py  utils.py
src/config/: base.py
src/db/: __init__.py  index.py
src/tests/: test_handlers.py
