[tool.poetry]
name = "dataaggregator-tg-bot"
version = "0.1.0"
description = "A Telegram bot interacting with MongoDB"
authors = ["Andrey Kazannikov <andrey.kazannikov@mail.ru>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.0.0"
motor = "^2.5.1"
python-dotenv = "^0.19.2"
pymongo = "^3.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
